--- a/index.html
+++ b/index.html
@@ -92,13 +92,41 @@
         <div class="content">
             <div class="contactInfo">
                 <h3>Contact Info</h3>
-                
+                <div class="contactInfoBx">
+                    <div class="box">
+                        <div class="icon">
+                            <i class="fa fa-phone"></i>
+                        </div>
+                        <div class="text">
+                            <h3>Phone</h3>
+                            <p>571-232-8576</p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <div class="icon">
+                            <i class="fa f-envelope-o"></i>
+                        </div>
+                        <div class="text">
+                            <h3>Email</h3>
+                            <p>jwpark417@gmail.com</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="formBx">
+                <form action="">
+                    <h3>Message Me</h3>
+                    <input type="text" name="" placeholder="Full Name">
+                    <input type="email" name="" placeholder="Email">
+                    <input type="submit" name="" value="Send">
+                </form>
             </div>
         </div>
     </section>
 
-
-
+    <div class="copyright">
+        <p>Copyright © 2020 John Park. All Rights Reserved</p>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
