Finish most of CSS and added JS for sticky navbar on scroll

--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Personal Portfoliio Website</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+
     <header>
         <a href="#" class="logo">Portfolio</a>
         <div class="toggle" onclick="toggleMenu();"></div>
@@ -20,13 +23,15 @@
         </ul>
     </header>
 
+
     <section class="banner" id="home">
         <div class="textBx">
             <h2>Hi there, I'm<br><span>John Park</span></h2>
-            <h3>I'm a Front End Developer</h3>
+            <!-- <h3>I'm a Front End Developer</h3> -->
             <a href="#about" class="btn">About Me</a>
         </div>
     </section>
+
 
     <section class="about" id="about">
         <div class="heading">
@@ -38,7 +43,7 @@
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore beatae excepturi sint temporibus mollitia rerum rem molestias saepe explicabo reiciendis vel ut, consectetur est. Iure minus est amet deserunt expedita!</p>
             </div>
             <div class="w50">
-                <img src="portfolio_pics/portfolio1.jpg" alt="">
+                <img src="images/kangaroo.jpg" alt="">
             </div>
         </div>
     </section>
@@ -59,6 +64,7 @@
         </div>
     </section>
 
+
     <section class="work" id="work">
         <div class="heading">
             <h2>My Latest Work</h2>
@@ -70,6 +76,7 @@
             </div>
         </div>
     </section>
+
 
     <section class="testimonial" id="testimonials">
         <div class="heading">
@@ -84,9 +91,10 @@
         </div>
     </section>
 
+    
     <section class="contact" id="contact">
         <div class="heading white">
-            <h2>Contact Us</h2>
+            <h2>Contact Me</h2>
             <p>Hit me up</p>
         </div>
         <div class="content">
