--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <ul class="menu">
             <li><a href="#home" onclick="toggleMenu();">Home</a></li>
             <li><a href="#about" onclick="toggleMenu();">About</a></li>
-            <li><a href="#services" onclick="toggleMenu();">Services</a></li>
+            <li><a href="#skills" onclick="toggleMenu();">Skills</a></li>
             <li><a href="#projects" onclick="toggleMenu();">Projects</a></li>
             <li><a href="#testimonials" onclick="toggleMenu();">Testimonials</a></li>
             <li><a href="#contact" onclick="toggleMenu();">Contact</a></li>
@@ -50,13 +50,13 @@
 
 
     
-    <section class="services" id="services">
+    <section class="skills" id="skills">
         <div class="heading white">
             <h2>My Skills</h2>
             <p>Lorem ipsum dolor sit amet</p>
         </div>
         <div class="content">
-            <div class="servicesBx">
+            <div class="skillsBx">
                 <img src="" alt="">
                 <h2>Web Development</h2>
                 <p>I make websites</p>
@@ -65,13 +65,13 @@
     </section>
 
 
-    <section class="work" id="work">
+    <section class="projects" id="projects">
         <div class="heading">
-            <h2>My Latest Work</h2>
+            <h2>My Latest Projects</h2>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
         </div>
         <div class="content">
-            <div class="workBx">
+            <div class="projectsBx">
                 <img src="" alt="">
             </div>
         </div>
@@ -91,7 +91,7 @@
         </div>
     </section>
 
-    
+
     <section class="contact" id="contact">
         <div class="heading white">
             <h2>Contact Me</h2>
